fix video text above door issue on iOS, make overlay darker

--- a/assets/css/pages/_index.scss
+++ b/assets/css/pages/_index.scss
@@ -123,8 +123,9 @@
             right: 0;
             bottom: 0;
             z-index: 1;
-            background: rgba(0, 0, 0, .1);
+            background: rgba(0, 0, 0, .3);
             pointer-events: none;
+            transform: translateZ(-600px);
         }
 
         &-content {
@@ -133,7 +134,7 @@
             height: 100%;
 
             .embed-responsive {
-                transform: translateZ(-600px);
+                transform: translateZ(-700px);
 
                 &:before {
                     padding-top: 77.125604%;
@@ -150,6 +151,7 @@
                 right: 0;
                 bottom: 0;
                 left: 0;
+                z-index: 1;
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
@@ -159,6 +161,7 @@
                 color: #fff;
                 text-align: center;
                 pointer-events: none;
+                transform: translateZ(-500px);
 
                 @include media-breakpoint-up(md) {
                     max-width: 55%;
